WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129397
[WebGL] Only skip context error retrieval if a pending context
https://bugs.webkit.org/show_bug.cgi?id=129397
Summary
[WebGL] Only skip context error retrieval if a pending context
Dean Jackson
Reported
2014-02-26 14:55:20 PST
We should still call the context getError if there is a lost context. Only a pending one should early exit.
Attachments
Patch
(1.42 KB, patch)
2014-02-26 14:56 PST
,
Dean Jackson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2014-02-26 14:56:38 PST
Created
attachment 225302
[details]
Patch
Ahmad Saleem
Comment 2
2022-10-10 15:05:21 PDT
Landed and didn't backed out:
https://github.com/WebKit/WebKit/commit/6a499e6c1fc70dfab11f1ddaa5a6c94abc24a3ea
Marking this as "RESOLVED FIXED".
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug