[WebGL] Only skip context error retrieval if a pending context https://bugs.webkit.org/show_bug.cgi?id=129397

Reviewed by Tim Horton.

A lost context should still ask the GC3D what the error is. Only
a pending context should return early.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::getError):

Canonical link: https://commits.webkit.org/147446@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164752 268f45cc-cd09-0410-ab3c-d52691b4dbfc